# XORann

./: LICENSE  pyproject.toml
src/: t_xorann.py
src/dataset/: XORDataset.py
src/model/: XORModel.py
