[project]
name = "XORann_Selitskiy"
version = "0.0.1"
authors = [
  { name="Stanislav Selitskiy", email="selitsky@yahoo.com" },
]
description = "XOR ANN implementation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Selitskiy/XORann"
Issues = "https://github.com/Selitskiy/XORann/issues"